android: compile with -O3 in debug. don't use host packages

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,12 +48,13 @@ configure_file("${CMAKE_CURRENT_SOURCE_DIR}/core/version.h.in" "${CMAKE_CURRENT_
 
 if(ANDROID)
     add_library(${PROJECT_NAME} SHARED core/nullDC.cpp)
+    set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_RELEASE} -O3")
+    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_RELEASE} -O3")
+    target_compile_options(${PROJECT_NAME} PRIVATE -fno-stack-protector)
+elseif(MSVC)
+    add_executable(${PROJECT_NAME} WIN32 core/nullDC.cpp)
 else()
-	if(MSVC)
-	    add_executable(${PROJECT_NAME} WIN32 core/nullDC.cpp)
-	else()
-	    add_executable(${PROJECT_NAME} MACOSX_BUNDLE core/nullDC.cpp)
-	endif()
+    add_executable(${PROJECT_NAME} MACOSX_BUNDLE core/nullDC.cpp)
 endif()
 
 target_compile_features(${PROJECT_NAME} PRIVATE c_std_11 cxx_std_11)
@@ -102,7 +103,7 @@ add_subdirectory(core/deps/glslang)
 target_link_libraries(${PROJECT_NAME} PRIVATE SPIRV)
 
 find_package(ALSA QUIET)
-if(ALSA_FOUND)
+if(ALSA_FOUND AND NOT ANDROID)
     target_compile_definitions(${PROJECT_NAME} PRIVATE USE_ALSA)
     target_include_directories(${PROJECT_NAME} PRIVATE ${ALSA_INCLUDE_DIRS})
     target_link_libraries(${PROJECT_NAME} PRIVATE ${ALSA_LIBRARIES})
@@ -132,7 +133,7 @@ elseif(MSVC)
 				IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/core/deps/SDL2-2.0.12/MSVC/lib/x86/SDL2.dll"
 				IMPORTED_IMPLIB "${CMAKE_CURRENT_SOURCE_DIR}/core/deps/SDL2-2.0.12/MSVC/lib/x86/SDL2.lib")
 	endif()
-else()
+elseif(NOT ANDROID)
     find_package(SDL2 QUIET)
 endif()
 
@@ -150,7 +151,7 @@ if(SDL2_FOUND)
 endif()
 
 find_package(ZLIB QUIET)
-if(TARGET ZLIB::ZLIB)
+if(TARGET ZLIB::ZLIB AND NOT ANDROID)
     target_link_libraries(${PROJECT_NAME} PRIVATE ZLIB::ZLIB)
 else()
     set(SKIP_INSTALL_ALL ON)
@@ -160,7 +161,7 @@ else()
 endif()
 
 find_package(PkgConfig QUIET)
-if(PKG_CONFIG_FOUND)
+if(PKG_CONFIG_FOUND AND NOT ANDROID)
     pkg_search_module(AO ao)
     if(AO_FOUND)
         target_compile_definitions(${PROJECT_NAME} PRIVATE USE_LIBAO)
