--- a/shell/linux/Makefile
+++ b/shell/linux/Makefile
@@ -274,8 +274,8 @@ else ifneq (,$(findstring vero4k,$(platform)))
 else ifneq (,$(findstring win32,$(platform)))
     NOT_ARM := 1
     CFLAGS += -fno-builtin-sqrtf -funroll-loops -DHAVE_FSEEKO -I /mingw64/include
-    LDFLAGS += -static-libgcc -static-libstdc++ -Wl,-subsystem,windows
-    LIBS := -lopengl32 -lwinmm -lgdi32 -lwsock32 -lws2_32 -ldsound -lcomctl32 -lcomdlg32 -lxinput -liphlpapi -Wl,-Bstatic -lgomp
+    LDFLAGS += -static-libgcc -static-libstdc++ -Wl,-subsystem,windows -L$(LOCAL_PATH)/../windows
+    LIBS := -lopenlibm -lopengl32 -lwinmm -lgdi32 -lwsock32 -lws2_32 -ldsound -lcomctl32 -lcomdlg32 -lxinput -liphlpapi -Wl,-Bstatic -lgomp
     PLATFORM_EXT := exe
     CC = gcc
     CXX = g++
@@ -314,9 +314,9 @@ CXXFLAGS += $(RZDCY_CFLAGS) -fno-rtti -fno-operator-names -D_GLIBCXX_USE_CXX11_A
 INCS += -I$(RZDCY_SRC_DIR) -I$(RZDCY_SRC_DIR)/deps -I$(RZDCY_SRC_DIR)/khronos
 
 ifdef FOR_WINDOWS
-	LIBS += -lm -static -lpthread
+	LIBS += -static -lpthread
 else
-	LIBS += -lm -lpthread
+	LIBS += -lpthread
 endif
 ifdef FOR_LINUX
 LIBS += -lrt
