--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,7 @@
 version: git-{branch}-{build}
-image: Visual Studio 2017
+image:
+  - Visual Studio 2017
+  - macos
 
 configuration:
 - fast
@@ -7,43 +9,92 @@ configuration:
 platform:
 - x64
 
-before_build:
-  - cmd: >-
-      set BUILD_PATH=shell\linux
-      
-      set EXTRA_PATH=C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\mingw64\bin\
-      
-      set PATH=%EXTRA_PATH%;%PATH%
-      
-      if not exist %BUILD_PATH% (mkdir %BUILD_PATH%)
-     
-      cd %BUILD_PATH%
-      
-build_script:
-  - cmd: >-
-      if "%CONFIGURATION%"=="fast" (mingw32-make -j2 platform=win32)
+for:
+  -
+    matrix:
+      only:
+        - image: Visual Studio 2017
 
-after_build:
-  - cmd: >-      
-      if "%CONFIGURATION%"=="fast" (cd ..\.. && set EXE_PATH=shell\linux\nosym-reicast.exe)
-      
-      mkdir artifacts
-      
-      move %EXE_PATH% artifacts\flycast-win_%PLATFORM%-%CONFIGURATION%-%APPVEYOR_REPO_COMMIT%.exe
+    before_build:
+      - cmd: >-
+          set BUILD_PATH=shell\linux
+          
+          set EXTRA_PATH=C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\mingw64\bin\
+          
+          set PATH=%EXTRA_PATH%;%PATH%
 
-artifacts:
-  - path: artifacts
-    name: flycast-win_$(PLATFORM)-$(CONFIGURATION)-$(APPVEYOR_REPO_COMMIT)
+          set GIT_SHORT_HASH=%APPVEYOR_REPO_COMMIT:~0,7%
+          
+          if not exist %BUILD_PATH% (mkdir %BUILD_PATH%)
+         
+          cd %BUILD_PATH%
+          
+    build_script:
+      - cmd: >-
+          if "%CONFIGURATION%"=="fast" (mingw32-make -j2 platform=win32)
 
-deploy:
-  release: $(APPVEYOR_REPO_TAG_NAME)
-  description: 'DC emulator flycast for gdxsv'
-  provider: GitHub
-  auth_token:
-    secure: e8oocRdRnpl9yIxtLBVA7dE6MZO4YOWmfb9IaBj1J7wWkOMRjPcmW+gnJwe3PbZN
-  artifact: flycast-win_$(PLATFORM)-$(CONFIGURATION)-$(APPVEYOR_REPO_COMMIT)
-  draft: false
-  prerelease: false
-  on:
-    branch: gdxsv-dev2
-    APPVEYOR_REPO_TAG: true
+    after_build:
+      - cmd: >-
+          if "%CONFIGURATION%"=="fast" (cd ..\.. && set EXE_PATH=shell\linux\nosym-reicast.exe)
+          
+          mkdir artifacts
+          
+          move %EXE_PATH% artifacts\Flycast-win_%PLATFORM%-%APPVEYOR_REPO_TAG_NAME%-%GIT_SHORT_HASH%.exe
+
+    artifacts:
+      - path: artifacts
+        name: Flycast-win_$(PLATFORM)-$(APPVEYOR_REPO_TAG_NAME)-$(GIT_SHORT_HASH)
+
+    deploy:
+      release: $(APPVEYOR_REPO_TAG_NAME)
+      description: 'DC emulator flycast for gdxsv'
+      provider: GitHub
+      auth_token:
+        secure: e8oocRdRnpl9yIxtLBVA7dE6MZO4YOWmfb9IaBj1J7wWkOMRjPcmW+gnJwe3PbZN
+      artifact: Flycast-win_$(PLATFORM)-$(APPVEYOR_REPO_TAG_NAME)-$(GIT_SHORT_HASH)
+      draft: false
+      prerelease: false
+      on:
+        branch: gdxsv-dev2
+        APPVEYOR_REPO_TAG: true
+
+  -
+    matrix:
+      only:
+        - image: macos      
+    
+    before_build:
+      - sh: >-
+          export GIT_SHORT_HASH=${APPVEYOR_REPO_COMMIT:0:7}
+
+          cd shell/apple
+
+          mkdir artifacts
+
+          brew install sdl2
+
+    build_script:
+      - sh: >-
+          xcodebuild archive -workspace reicast.xcworkspace -scheme reicast-osx -archivePath flycast.xcarchive
+
+    after_build:
+      - sh: >-
+          mv flycast.xcarchive/Products/Applications/Flycast.app Flycast-$APPVEYOR_REPO_TAG_NAME-$GIT_SHORT_HASH.app
+
+          7z a artifacts/Flycast-macOS-$APPVEYOR_REPO_TAG_NAME-$GIT_SHORT_HASH.zip Flycast-$APPVEYOR_REPO_TAG_NAME-$GIT_SHORT_HASH.app "How to Open.pdf"
+
+    artifacts:
+      - path: shell/apple/artifacts/Flycast-macOS-$APPVEYOR_REPO_TAG_NAME-$GIT_SHORT_HASH.zip
+
+    deploy:
+      release: $(APPVEYOR_REPO_TAG_NAME)
+      description: 'DC emulator flycast for gdxsv'
+      provider: GitHub
+      auth_token:
+        secure: e8oocRdRnpl9yIxtLBVA7dE6MZO4YOWmfb9IaBj1J7wWkOMRjPcmW+gnJwe3PbZN
+      artifact: shell/apple/artifacts/Flycast-macOS-$APPVEYOR_REPO_TAG_NAME-$GIT_SHORT_HASH.zip
+      draft: false
+      prerelease: false
+      on:
+        branch: gdxsv-dev2
+        APPVEYOR_REPO_TAG: true
