Revert "disable fast math"
This reverts commit 15ed2681924012a450284a0f5d770af6b659b330.

--- a/shell/linux/Makefile
+++ b/shell/linux/Makefile
@@ -307,7 +307,7 @@ LDFLAGS += -g -Wl,-Map,$(notdir $@).map,--gc-sections -Wl,-O3 -Wl,--sort-common 
 
 CFLAGS += $(RZDCY_CFLAGS) -g -O3 -D NDEBUG -c -fopenmp #-D NO_REND
 CFLAGS += -frename-registers -fno-strict-aliasing
-CFLAGS += -ftree-vectorize  -Wno-unused-result
+CFLAGS += -ffast-math -ftree-vectorize  -Wno-unused-result
 
 CXXFLAGS += $(RZDCY_CFLAGS) -fno-rtti -fno-operator-names -D_GLIBCXX_USE_CXX11_ABI=0 -std=gnu++14
 
