rend: multi-render, delay swap, refactor main ui loop
move ui loop out of hw/pvr
vk: implement multi-rendering, delay swap. Load fb before render pass
fps counter now counts frames, not renders
vk: force ignoreTexAlpha for 565 texture in case the supporting texture
has an alpha channel (RTT). Fixes Alone in the Dark cinematic scenes.
pvr: better detection of frame swapping (FB_R_SOF/FB_W_SOF)
pvr: synchronous rendering now always waits for render in progress
(speed measurement not reliable, render skipped when multi-rendering)
vk: limit swap chain size to 2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -772,6 +772,7 @@ target_sources(${PROJECT_NAME} PRIVATE
         core/rend/gui_android.h
         core/rend/gui_util.cpp
         core/rend/gui_util.h
+        core/rend/mainui.cpp
         core/rend/osd.cpp
         core/rend/osd.h
         core/rend/sorter.cpp
