net: launch miniupnp async. filter loopbacked broabcast pkts. dhcp reset
ftspeed network support
delete all dhcp negos when destroying dhcp server
filter broadcasted udp packets coming from self
launch miniupnp async since it takes time to complete (2-4s)
fix unit test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -725,6 +725,11 @@ target_sources(${PROJECT_NAME} PRIVATE
         core/network/picoppp.cpp
         core/network/picoppp.h)
 
+if(ANDROID)
+    target_sources(${PROJECT_NAME} PRIVATE
+            core/network/ifaddrs.c)
+endif()
+
 target_sources(${PROJECT_NAME} PRIVATE
         core/oslib/audiobackend_alsa.cpp
         core/oslib/audiobackend_coreaudio.cpp
