--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -158,7 +158,7 @@ if(SDL2_FOUND)
 endif()
 
 find_package(ZLIB QUIET)
-if(TARGET ZLIB::ZLIB AND NOT ANDROID)
+if(TARGET ZLIB::ZLIB AND NOT ANDROID AND NOT WIN32)
     target_link_libraries(${PROJECT_NAME} PRIVATE ZLIB::ZLIB)
 else()
     set(SKIP_INSTALL_ALL ON)
